# shinywaddle

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: analyzer.rs  error.rs  journal.rs  lib.rs  main.rs  mover.rs  scanner.rs
