[package]
name = "fs-cleaner"
version = "0.1.0"
edition = "2024"
description = "A safety-focused CLI tool to detect and flatten redundant nested directory structures"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
